# realtime-sign-translator

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
artifacts/: README.md
docs/: architecture.md  libras.md  vocabulary.md
notebooks/: train_libras_colab.ipynb
scripts/: download_models.py  probe_camera.py  run_desktop.py  run_headless.py
src/: __init__.py  bootstrap.py  main.py
src/implementations/: __init__.py
src/implementations/camera/: __init__.py  opencv_camera.py
src/implementations/config/: __init__.py  yaml_configuration.py
src/implementations/libras/: __init__.py  (+4 more)
src/interface/: __init__.py  camera_provider.py  caption_publisher.py  configuration_provider.py  hand_landmark_extractor.py  logger.py  sequence_classifier.py
src/models/: __init__.py  confidence.py  frame_sample.py  hand_landmarks.py  handedness.py  language.py  libras_vocabulary.py  sign_prediction.py
src/server/: __init__.py  routes.py  server.py  state.py  websocket.py  websocket_publisher.py
src/ui/: __init__.py  main_window.py  theme.py
tests/: test_landmark_normalizer.py  test_libras_caption_service.py  test_libras_feature_extractor.py  test_libras_vocabulary.py  test_mock_classifier.py  test_prediction_smoother.py  test_sequence_buffer.py  test_sign_prediction.py
training/: __init__.py
training/data_collection/: collect_samples.py
training/evaluation/: evaluate_model.py
training/libras/: fetch_minds_libras.py  train_libras_model.py
training/model_training/: train_model.py
training/preprocessing/: build_dataset.py
(+23 files in other folders)
