[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signflow-realtime"
version = "0.1.0"
description = "Real-time sign language recognition desktop app with temporal sequence classification."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "SignFlow" }]
dependencies = [
    "numpy>=1.24,<2.1",
    "opencv-python>=4.8",
    "mediapipe>=0.10.14",
    "Pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "customtkinter>=5.2.2",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.15"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
packaging = ["pyinstaller>=6.0"]

[project.scripts]
signflow = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
